feat: Update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rize/ts-template",
+  "name": "@msafe/typescript-template",
   "version": "0.0.0",
   "description": "TS template",
   "type": "commonjs",
