--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
     "lint-fix": "eslint . --ext .ts,.tsx --fix",
     "start": "ts-node -r tsconfig-paths/register src/scripts/index.ts"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "ethers": "^6.13.5"
+  }
 }
