--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@typechain/ethers-v6": "^0.5.1",
+    "bignumber.js": "^9.1.2",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5"
   }
